// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SignUpPage > renders page 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center ant-row-middle h-100 css-dev-only-do-not-override-mncuj7"
    data-testid="sign-up"
  >
    <div
      class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-card-body"
      >
        <p>
          Please let us know your e-mail address to complete your account registration.
        </p>
        <div
          data-testid=""
        >
          <form
            action="#"
          >
            <div
              class="ant-form-item css-dev-only-do-not-override-mncuj7 ant-form-item-horizontal"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-mncuj7"
              >
                <div
                  class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-mncuj7"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        class="ant-input css-dev-only-do-not-override-mncuj7 ant-input-outlined"
                        data-test-id="email"
                        data-testid="email"
                        form="[object Object]"
                        name="email"
                        placeholder="Email"
                        type="email"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-end css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-col css-dev-only-do-not-override-mncuj7"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                  data-testid="submit"
                  disabled=""
                  type="submit"
                >
                  <span>
                    Sign up
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignUpPage > renders page with errors 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center ant-row-middle h-100 css-dev-only-do-not-override-mncuj7"
    data-testid="sign-up"
  >
    <div
      class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-card-body"
      >
        <p>
          Please let us know your e-mail address to complete your account registration.
        </p>
        <div
          class="ant-row mb3 css-dev-only-do-not-override-mncuj7"
          data-testid="error"
        >
          <div
            class="ant-col css-dev-only-do-not-override-mncuj7"
          >
            <div
              class="ant-alert ant-alert-error css-dev-only-do-not-override-mncuj7"
              data-show="true"
              role="alert"
            >
              <span
                aria-label="close-circle"
                class="anticon anticon-close-circle ant-alert-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close-circle"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                  />
                </svg>
              </span>
              <div
                class="ant-alert-content"
              >
                <div
                  class="ant-alert-message"
                >
                  This is an error yo
                </div>
              </div>
              <button
                class="ant-alert-close-icon"
                tabindex="0"
                type="button"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          data-testid=""
        >
          <form
            action="#"
          >
            <div
              class="ant-form-item css-dev-only-do-not-override-mncuj7 ant-form-item-horizontal"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-mncuj7"
              >
                <div
                  class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-mncuj7"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        class="ant-input css-dev-only-do-not-override-mncuj7 ant-input-outlined"
                        data-test-id="email"
                        data-testid="email"
                        form="[object Object]"
                        name="email"
                        placeholder="Email"
                        type="email"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-end css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-col css-dev-only-do-not-override-mncuj7"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                  data-testid="submit"
                  disabled=""
                  type="submit"
                >
                  <span>
                    Sign up
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignUpPage > renders page with loading 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center ant-row-middle h-100 css-dev-only-do-not-override-mncuj7"
    data-testid="sign-up"
  >
    <div
      class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-card-body"
      >
        <p>
          Please let us know your e-mail address to complete your account registration.
        </p>
        <div
          data-testid="loading"
        >
          <form
            action="#"
          >
            <div
              class="ant-form-item css-dev-only-do-not-override-mncuj7 ant-form-item-horizontal"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-mncuj7"
              >
                <div
                  class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-mncuj7"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        class="ant-input ant-input-disabled css-dev-only-do-not-override-mncuj7 ant-input-outlined"
                        data-test-id="email"
                        data-testid="email"
                        disabled=""
                        form="[object Object]"
                        name="email"
                        placeholder="Email"
                        type="email"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-end css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-col css-dev-only-do-not-override-mncuj7"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-loading"
                  data-testid="submit"
                  disabled=""
                  type="submit"
                >
                  <span
                    class="ant-btn-icon ant-btn-loading-icon"
                  >
                    <span
                      aria-label="loading"
                      class="anticon anticon-loading anticon-spin"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="loading"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span>
                    Sign up
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
